docs: clarify direct access needed to nodes in insecure mode
And some small updates.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/website/content/_index.html
+++ b/website/content/_index.html
@@ -127,7 +127,7 @@ title = "Talos Linux"
             <h3 class="display-4 text-center mb-3">Immutable</h3>
             <p class="text-center">
               Talos improves security further by mounting the root filesystem as
-              read-only and removing any host-level such as a shell and SSH.
+              read-only and removing host-level access tools such as a shell and SSH.
             </p>
           </div>
           <div class="col-12 col-lg-4 mb-3">
