--- a/website/content/_index.html
+++ b/website/content/_index.html
@@ -1,22 +1,24 @@
 +++
 title = "Talos Linux"
+images = ["images/talos-dev-banner.png"]
 +++
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@SideroLabs">
-<meta name="twitter:title" content="Talos Linux">
-<meta name="twitter:description" content="Talos Linux is Linux designed for Kubernetes – secure, immutable, and minimal.">
-<meta name="twitter:image" content="https://www.talos.dev/images/logo.svg">
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@SideroLabs" />
+<meta name="twitter:title" content="Talos Linux" />
+<meta name="twitter:description"
+  content="Talos Linux is Linux designed for Kubernetes – secure, immutable, and minimal." />
+<meta name="twitter:image" content="https://www.talos.dev/images/talos-dev-banner.png" />
 
-{{< blocks/cover title="Talos Linux" image_anchor="top" color="orange" >}}
+{{< blocks/cover title="Talos Linux" image_anchor="top" color="orange">}}
   <div class="mx-auto">
     <div class="col-12 text-center">
-      <img width="250" class="" src="/images/logo.svg">
+      <img width="250" class="" src="/images/logo.svg" />
     </div>
-    <br/>
+    <br />
     <h3 class="display-4 text-center mb-3">The Kubernetes Operating System</h3>
   </div>
-  {{< /blocks/cover >}}
+  {{< /blocks/cover>}}
 
     <section class="">
       <div class="container">
@@ -24,7 +26,8 @@ title = "Talos Linux"
           <div class="col-12 col-lg-6">
             <h1 class="display-1 text-center mb-5">What is Talos Linux?</h1>
             <p class="">
-              Talos Linux is Linux designed for Kubernetes – secure, immutable, and minimal.
+              Talos Linux is Linux designed for Kubernetes – secure, immutable, and
+              minimal.
             </p>
             <ul class="">
               <li class="">
@@ -34,16 +37,16 @@ title = "Talos Linux"
                 All system management is done via an API. No SSH, shell or console
               </li>
               <li class="">
-                Production ready: supports some of the largest Kubernetes clusters in the world
+                Production ready: supports some of the largest Kubernetes clusters
+                in the world
               </li>
-              <li class="">
-                Open source project from the team at Sidero Labs
-              </li>
+              <li class="">Open source project from the team at Sidero Labs</li>
             </ul>
             <div class="row align-items-center">
               <div class="col-8">
                 <p class="my-5 h5">
-                  It only takes 3 minutes to launch a Talos cluster on your laptop inside Docker.
+                  It only takes 3 minutes to launch a Talos cluster on your laptop
+                  inside Docker.
                 </p>
               </div>
               <div class="col-4 text-center">
@@ -81,8 +84,8 @@ title = "Talos Linux"
           <div class="col-12 col-lg-4">
             <h3 class="display-4 text-center mb-3">Evolvability</h3>
             <p class="">
-              Talos simplifies your architecture, increases your agility, and
-              always delivers current stable Kubernetes and Linux versions.
+              Talos simplifies your architecture, increases your agility, and always
+              delivers current stable Kubernetes and Linux versions.
             </p>
           </div>
         </div>
@@ -106,17 +109,13 @@ title = "Talos Linux"
           </div>
           <div class="col-12 col-lg-4 mb-3">
             <h3 class="display-4 text-center mb-3">Hardened</h3>
-            <p class="text-center">
-              Hardened by design:
-            </p>
+            <p class="text-center">Hardened by design:</p>
             <ul class="pl-4">
               <li>
                 Built with the Kernel Self Protection Project configuration
                 recommendations.
               </li>
-              <li>
-                All access to the API is secured with Mutual TLS.
-              </li>
+              <li>All access to the API is secured with Mutual TLS.</li>
               <li>
                 Settings and configuration described in the CIS guidelines are
                 applied by default.
@@ -127,7 +126,7 @@ title = "Talos Linux"
             <h3 class="display-4 text-center mb-3">Immutable</h3>
             <p class="text-center">
               Talos improves security further by mounting the root filesystem as
-              read-only and removing host-level access tools such as a shell and SSH.
+              read-only and removing any host-level such as a shell and SSH.
             </p>
           </div>
           <div class="col-12 col-lg-4 mb-3">
@@ -151,14 +150,19 @@ title = "Talos Linux"
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <img width="142" class="" src="/images/certified-kubernetes-color.png" alt="Certified Kubernetes">
+            <img width="142" class="" src="/images/certified-kubernetes-color.png" alt="Certified Kubernetes" />
           </div>
         </div>
         <div class="row">
           <div class="col-12 text-center">
-            <img width="250" class="" src="/images/cncf-color.png" alt="Certified Kubernetes">
-            <p class="my-3"> We are a <a class="" href="https://cncf.io/"> Cloud Native Computing Foundation </a>
-              member. </p>
+            <img width="250" class="" src="/images/cncf-color.png" alt="Certified Kubernetes" />
+            <p class="my-3">
+              We are a
+              <a class="" href="https://cncf.io/">
+                Cloud Native Computing Foundation
+              </a>
+              member.
+            </p>
           </div>
         </div>
       </div>
